# llm-bench

./: .gitignore  CLAUDE.md  HANDOFF.md  MODEL_STATUS.md  PLAN.md  README.md  REPORT.md  config.dgx-spark.yaml  config.linux.yaml  config.ryzen-ai-trackB.yaml  config.ryzen-ai.yaml  config.trackB.yaml  config.yaml  prompts.json  pyproject.toml  visualize.py
.github/ISSUE_TEMPLATE/: bug_report.md  experiment_request.md
docs/: concurrency-benchmark-plan.md  dgx-spark.md  mac-apple-silicon.md  methodology.md  reddit-post-draft.md  ryzen-ai-395.md  setup.md  vllm-sglang-diagnosis.md  vram-estimation.md
results/consolidated/: all_devices.csv  dgx-spark.csv  linux-3090x2.csv  mac.csv  ryzen-ai.csv
results/remote/3090/: bench_3090_trackA_20260404_160347.csv  bench_3090_trackB_20260404_160347.csv  fix_llamacpp_35b_q8_20260405_143819.csv  fix_vllm_20260405_143819.csv  fix_vllm_27b.csv  fix_vllm_27b_eager_20260406_085236.csv  sup_llamacpp_27b_20260406_010243.csv  sup_ollama_122b_20260406_073951.csv  sup_trackB_9b_20260406_010243.csv  sup_vllm_27b_20260406_073951.csv  sup_vllm_prefill_20260406_073951.csv  trackA_20260404_160444.csv  trackB_20260404_160444.csv
scripts/: blog_hero_chart.py  check_models.sh  consolidate_results.py  download.sh  run_bench.sh  run_dgx_full_v3.sh  run_full_v3.sh  run_mac_full.sh  run_ryzen_full_v2.sh  system_info.sh
src/: concurrent_runner.py  memory.py  metrics.py  prompt_gen.py  runner.py  thermal.py
src/backends/: base.py  lemonade_backend.py  llamacpp.py  lmstudio.py  mlx_backend.py  ollama.py  sglang_backend.py  vllm_backend.py
(+27 files in other folders)
