[project]
name = "llm-bench"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.9.4",
    "mlx-lm>=0.29.1; sys_platform == 'darwin'",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "seaborn>=0.13.2",
    "huggingface-hub>=0.27.0",   # 모델 다운로드 (전 플랫폼)
]

[project.optional-dependencies]
vllm = ["vllm>=0.7.0"]          # NVIDIA GPU 환경에서만: uv pip install -e ".[vllm]"

[tool.uv.sources]
mlx-lm = { git = "https://github.com/ml-explore/mlx-lm.git" }
